# aamp-rust

./: .gitignore  Cargo.toml  README.md
data/: botw_numbered_names.txt
src/: lib.rs  names.rs  parse.rs  parser.rs  types.rs  write.rs  yaml.rs
src/yaml/: emit.rs  mod.rs  parse.rs
src/yaml/forked/: mod.rs  scanner.rs
