[package]
name = "aamp"
description = "Rust library for Nintendo parameter archive (AAMP) files"
repository = "https://github.com/NiceneNerd/aamp-rust"
documentation = "https://docs.rs/aamp"
readme = "README.md"
keywords = ["Nintendo", "aamp", "Zelda", "gamedev"]
categories = ["game-development", "parsing"]
version = "0.1.1"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
binread = "1.0.1"
binwrite = "0.2.1"
cached = "0.13.1"
crc = "1.8.1"
indexmap = "1.4.0"
glob = "0.3.0"
lazy_static = "1.4.0"
metrohash = "1.0.6"
num-format = "0.4.0"
parse_int = "0.4.0"
regex = "1.3.9"
ryu = "1.0"
unescape = "0.1.0"