[package]
name = "aamp"
description = "Rust library for Nintendo parameter archive (AAMP) files"
repository = "https://github.com/NiceneNerd/aamp-rust"
documentation = "https://docs.rs/aamp"
readme = "README.md"
keywords = ["Nintendo", "aamp", "Zelda", "gamedev"]
categories = ["game-development", "parsing"]
version = "0.2.0"
authors = ["Caleb Smith <c.smith@tuta.io>"]
license = "MIT"

[dependencies]
nom = "7.1.1"